tests/baselines/reference/differenceTypeNegative.errors.txt
tests/cases/conformance/types/rest/differenceTypeNegative.ts(3,17): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(4,17): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(5,17): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(6,17): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(8,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(9,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(10,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(11,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(12,21): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(18,5): error TS2322: Type 'U - keyof T' is not assignable to type 'U - keyof U'.
  Type 'keyof T' is not assignable to type 'keyof U'.
    Type 'keyof T' is not assignable to type '"toString" | "charAt" | "charCodeAt" | "concat" | "indexOf" | "lastIndexOf" | "localeCompare" | "match" | "replace" | "search" | "slice" | "split" | "substring" | "toLowerCase" | "toLocaleLowerCase" | "toUpperCase" | "toLocaleUpperCase" | "trim" | "length" | "substr" | "valueOf"'.
      Type 'keyof T' is not assignable to type '"valueOf"'.
tests/cases/conformance/types/rest/differenceTypeNegative.ts(19,5): error TS2322: Type 'U - keyof U' is not assignable to type 'U - keyof T'.
  Type 'keyof U' is not assignable to type 'keyof T'.


==== tests/cases/conformance/types/rest/differenceTypeNegative.ts (11 errors) ====
    type Abc = { a; b; c }
    type Surprise = 'a' | 'b' | 12;
    let bad1: Abc - 12;
                    ~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    let bad2: Abc - Surprise;
                    ~~~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    let bad3: Abc - 'a' & 'b';
                    ~~~~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    let bad4: Abc - number;
                    ~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    function f<T, U extends 12, V extends Surprise, W extends 'a' & 'b', X extends number>(t: T) {
        let bad1: Abc - T;
                        ~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        let bad2: Abc - 12;
                        ~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        let bad3: Abc - Surprise;
                        ~~~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        let bad4: Abc - 'a' & 'b';
                        ~~~~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        let bad5: Abc - number;
                        ~~~~~~
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
        return bad1;
    }
    function g<T,U extends keyof Abc> (t: T, u: U) {
        let usubtkey: U - keyof T;
        let usubukey: U - keyof U;
        usubukey = usubtkey;
        ~~~~~~~~
!!! error TS2322: Type 'U - keyof T' is not assignable to type 'U - keyof U'.
!!! error TS2322:   Type 'keyof T' is not assignable to type 'keyof U'.
!!! error TS2322:     Type 'keyof T' is not assignable to type '"toString" | "charAt" | "charCodeAt" | "concat" | "indexOf" | "lastIndexOf" | "localeCompare" | "match" | "replace" | "search" | "slice" | "split" | "substring" | "toLowerCase" | "toLocaleLowerCase" | "toUpperCase" | "toLocaleUpperCase" | "trim" | "length" | "substr" | "valueOf"'.
!!! error TS2322:       Type 'keyof T' is not assignable to type '"valueOf"'.
        usubtkey = usubukey;
        ~~~~~~~~
!!! error TS2322: Type 'U - keyof U' is not assignable to type 'U - keyof T'.
!!! error TS2322:   Type 'keyof U' is not assignable to type 'keyof T'.
    }
    